# social-club-backend-2

./: Dockerfile  docker-compose.yml  heroku.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
accounts/: admin.py  filters.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
chat/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py
config/: settings.py  urls.py
events/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py
staticfiles/: staticfiles.json
